RESOLVED FIXED303136
[threaded-animations] scroll-driven animations should only be accelerated if their source is composited
https://bugs.webkit.org/show_bug.cgi?id=303136
Summary [threaded-animations] scroll-driven animations should only be accelerated if ...
Antoine Quint
Reported 2025-11-26 05:58:28 PST
At the moment, scroll-driven animations make the assumption that their timeline's source is composited, examplified in code with `ASSERT(sourceScrollableArea->scrollingNodeID())` in `ScrollTimeline::createAcceleratedRepresentation()`. This assumption and that assertion fail in a number of demos where `overflow: hidden` is set and the source is not composited.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-26 05:58:36 PST
Antoine Quint
Comment 2 2025-11-26 06:09:21 PST
EWS
Comment 3 2025-11-26 19:31:18 PST
Committed 303589@main (87befbbe824b): <https://commits.webkit.org/303589@main> Reviewed commits have been landed. Closing PR #54482 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.