Source/WebCore/animation/AnimationTimeline.h
@@ -80,8 +80,10 @@ public:
     static void updateGlobalPosition(WebAnimation&);
 
 #if ENABLE(THREADED_ANIMATIONS)
-    void clearAcceleratedRepresentation() { m_acceleratedRepresentation = nullptr; }
+    bool canBeAccelerated() const { return m_canBeAccelerated; }
+    virtual bool computeCanBeAccelerated() const { return false; }
     AcceleratedTimeline& acceleratedRepresentation();
+    void runPostRenderingUpdateTasks();
 #endif
 
 protected:
@@ -100,6 +102,7 @@ protected:
 private:
 #if ENABLE(THREADED_ANIMATIONS)
     RefPtr<AcceleratedTimeline> m_acceleratedRepresentation;
+    bool m_canBeAccelerated { false };
 #endif
     std::optional<WebAnimationTime> m_currentTime;
     std::optional<WebAnimationTime> m_duration;
